增加了第四章的一点点笔记 还需要完善

--- a/第四章 基本时序逻辑电路建模.md
+++ b/第四章 基本时序逻辑电路建模.md
@@ -1,1 +1,33 @@
 # 第四章 基本时序逻辑电路建模
+
+## 4.1 锁存器Latch
+**Latch和FF的区别：Latch的敏感参数表中包含输入参数**
+
+Latch输入信号D的变化会影响输出Q，在时钟enable的时间内Q随D的变化而变化；FF仅在时钟上升沿时才会判断改变输出Q的值。二者波形有很大不同。
+
+### 4.1.2 D锁存器
+```VHDL
+LIBRARY IEEE
+USE IEEE.std_logic_1164.ALL;
+
+ENTITY D_latch IS
+    
+END D_latch
+```
+---
+## 4.2 触发器Flip-Flop
+
+### 4.2.2 带有$\overline Q$输出的D触发器
+将`signal`放在process中时，有几个signal变量，仿真时就会产生几个中间节点，导致设计结果不符合要求
+
+### 4.2.3 JK触发器
+
+---
+
+## 4.3 寄存器Register
+
+---
+## 4.4 计数器Counter
+
+---
+## 4.5 乘法器Multiplier
