增加了D-Latch，D-F.F，的笔记

--- a/第四章 基本时序逻辑电路建模.md
+++ b/第四章 基本时序逻辑电路建模.md
@@ -1,26 +1,92 @@
 # 第四章 基本时序逻辑电路建模
 
+## Classification of sequential logic
+### In terms of register actions
+- Synchronous: The register actions are triggered by clock changes only
+- Asynchronous: Asynchronous sequential logic is not synchronized by a clock signal; the circuit output can chage directly in response to input changes
+### In terms of output signal
+- Mealy: the output depends on both memory state and the input
+- Moore: The output depends on memory state only
+
+
 ## 4.1 锁存器Latch
 **Latch和FF的区别：Latch的敏感参数表中包含输入参数**
 
-Latch输入信号D的变化会影响输出Q，在时钟enable的时间内Q随D的变化而变化；FF仅在时钟上升沿时才会判断改变输出Q的值。二者波形有很大不同。
+Latch输入信号D的变化会影响输出Q，在时钟enable的时间内Q随D的变化而变化；FF仅在时钟边沿才会判断改变输出Q的值。二者波形有很大不同。
 
-### 4.1.2 D锁存器
+### 4.1.2 D Latch
 ```VHDL
-LIBRARY IEEE
+LIBRARY IEEE;
 USE IEEE.std_logic_1164.ALL;
 
 ENTITY D_latch IS
-    
-END D_latch
+    PORT(
+        D,Enable: IN std_logic;
+        Q: OUT std_logic
+    );
+END D_latch;
+
+ARCHITECTURE behav OF D_latch IS
+BEGIN
+    PROCESS (D, Enable)
+    BEGIN
+        IF (Enable = '1') THEN Q<=D;
+        end IF;
+    END PROCESS             -- described by incomplete if statement
+END behav;
 ```
 ---
 ## 4.2 触发器Flip-Flop
 
+### 4.2.1 D F.F
+```VHDL
+LIBRARY IEEE;
+USE IEEE.std_logic_1164.all;
+
+ENTITY D_FF IS
+    PORT(
+        D, CLK: IN std_logic;
+        Q: OUT std_logic;
+    )
+END D_FF;
+
+ARCHITECTURE behav OF D_FF IS
+BEGIN
+    PROCESS(CLK)
+    BEGIN--------------------------多种表述方式
+        IF (CLK = '1') THEN Q<=D;   
+        -- or
+        IF (CLK'event AND CLK = '1') THEN Q<=D;
+        -- or
+        IF RISING_EDGE(CLK) THEN Q<=D;  --can be used only if CLK is std_logic
+        -----------------------------
+        END IF;
+    END PROCESS;
+END behav;
+```
+
+**最常用的边沿检测表达方式**
+```VHDL
+-- 注意这两个语句后面不能接ELSE分支
+IF CLK'event and CLK = '1' THEN -- 上升沿
+IF CLK'event and CLK = '0' THEN -- 下降沿
+```
+
 ### 4.2.2 带有$\overline Q$输出的D触发器
 将`signal`放在process中时，有几个signal变量，仿真时就会产生几个中间节点，导致设计结果不符合要求
 
+着重参考*课本P73-74页例4-5*
+- 使用`signal`作为中间变量时，注意Q和Qbar的赋值语句要放在`Process`结构的外面，否则将产生三个`signal`变量，导致仿真延迟不符合要求；若放在`Process`外部，则后面两个赋值语句与Process为并行关系
+- 使用`variable`做中间变量时要注意`variable` 为局部量
+
 ### 4.2.3 JK触发器
+#### 真值表
+|$J$|$K$|$Q$|$\overline{Q}$|
+|--|--|--|--|
+|0|0|$Q$|$\overline{Q}$|
+|0|1|0|1|
+|1|0|1|0|
+|1|1|$\overline{Q}$|$Q$|
 
 ---
 
