增加第五章概述

--- a/第五章 同步时序电路设计.md
+++ b/第五章 同步时序电路设计.md
@@ -1,1 +1,19 @@
 # 第五章 同步时序电路设计
+
+State Machine  
+- A mathematic model for computer programs or sequential logic description.
+- A sequential logic event can be considered as an abstract machine with a finite number of states. The machine is in one state only at a given time.
+- Change from one state to another can be initiated by a triggering event or condition (state transition)s
+
+Race and Hazard  
+- Race and Hazard: a type of flaw in electronic system. A device may received signals with different delay due to different paths which may causes transient error in output.
+- In sequential logic，the next state and output are determined by combinational logic,  where race and hazard may occur. Mistakes may be introduced in the whole sequential system. 
+- Race and Hazard can be avoided by synchronous sequential logic. 
+
+## ASM(Algorithmic State Machine) Chart
+- It resembles software flow chart, but it has corresponding hardware structure.
+
+### Components
+<img src="./">
+
+**区分state box和conditional output box**
