--- a/第五章 同步时序电路设计.md
+++ b/第五章 同步时序电路设计.md
@@ -44,3 +44,14 @@
 - One state  is more than a state box.
 - Conditional output box, or decision box can also be a part of the state.
 - Each state represents a system state during one clock cycle, indicating the operations to be done in the  state.
+r4
+
+### 5.2.3 Classification of FSM
+#### In terms of Signal Outputting
+- **Mealy**: the output depends on both memory state and the input
+- **Moore**: The output depends on memory state only
+
+Differences:  
+- Moore machine needs more stated than Mealy machine.
+- The output of Moore machine is independent of current input, **the effect brought by current input will take palce in the next clock cycle**
+- The outputt of Mealy machine depends on both current state and input. **Input variation leads to immediate output change.** The output can change during the current state. 
