由于插图位置变动，笔记中的图片地址做了修改

--- a/第五章 同步时序电路设计.md
+++ b/第五章 同步时序电路设计.md
@@ -21,7 +21,7 @@
 
 **Components**(P90-91)
 
-<img src="./5-3-1-ASM-Chart-1.png">
+<img src="./pictures/5-3-1-ASM-Chart-1.png">
 
 #### 5.2.2.1 State box
 - 状态名称左上角，二进制编码右上角，框内写操作内容
@@ -29,6 +29,7 @@
   - 操作：例如`R<-0`表示赋值，直到下一次重新赋值才改变`R`的值
   - 输出：例如`C='1'`，表示只在这个状态中才有`c='1'`其他状态`c='0'`
 - 一个时钟周期内完成状态
+<img src="./pictures/5-3-1-ASM-Chart-2.png">
 
 #### 5.2.2.2 Decision Box
 - The decision box must **followed and be associated with a state box**. The decision is made in the **same clock cycle** as the actions of the associated state.
