Add notes for decoder

--- a/第三章 组合逻辑电路建模.md
+++ b/第三章 组合逻辑电路建模.md
@@ -1,1 +1,38 @@
 # 第三章 组合逻辑电路建模
+
+## 3.1 Decoder Design
+
+### 3-8 Decoder
+```VHDL
+LIBRARY IEEE;
+USE IEEE.std_logic_1164.all;
+
+ENTITY decoder38 IS
+    PORT(a,b,c,g1,g2a,g2b: IN std_logic;
+        y: OUT std_logic_vector(7 DOWNTO 0));
+END decoder38;
+
+ARCHITECTURE behav OF decoder38 IS
+    SIGNAL indata: std_logic_vector(2 DOWNTO 0);
+BEGIN
+    indata <= c&b&a;
+    PROCESS (indata, g!,g2a, g2b)
+    BEGIN
+        IF g1 = '1' AND g2a = '0' AND g2b = '0' THEN
+            CASE indata IS
+                WHEN "000" => Y <= "11111110";
+                WHEN "001" => Y <= "11111101";
+                WHEN "010" => Y <= "11111011";
+                WHEN "011" => Y <= "11110111";
+                WHEN "100" => Y <= "11101111";
+                WHEN "101" => Y <= "11011111";
+                WHEN "110" => Y <= "10111111";
+                WHEN "111" => Y <= "01111111";
+                WHEN OTHERS => Y <= "XXXXXXXX";
+            END CASE;
+        ELSE
+            Y<= "11111111";
+        END IF;
+    END PROCESS;
+END behav;
+```
