Add some details for significant times

--- a/第五章 同步时序电路设计.md
+++ b/第五章 同步时序电路设计.md
@@ -1,10 +1,12 @@
 # 第五章 同步时序电路设计
 
 ## 5.1 Sequential Logic Circuit
-### Three significant time parameters (P87)
-- 建立时间：触发器的时钟信号上升沿到来前数据稳定不变的时间
-- 保持时间：触发器时钟信号上升沿到来后数据稳定不变的时间
-- 传播延时：信号在传播路径上的延时
+### **Three significant time parameters** (P87)
+- 建立时间$t_{su}$：触发器的时钟信号上升沿到来前数据稳定不变的时间
+- 保持时间$t_{hold}$$：触发器时钟信号上升沿到来后数据稳定不变的时间
+- 传播延时$t_{c-q}$：信号在传播路径上的延时
+- 最小传播时间必须满足：
+$$T>e_{c-q}+t_{hold}+t_{su}$$
 
 ## 5.2 State Machine  
 - A mathematic model for computer programs or sequential logic description.
@@ -47,7 +49,7 @@
 - Each state represents a system state during one clock cycle, indicating the operations to be done in the  state.
 r4
 
-### 5.2.3 Classification of FSM
+### **5.2.3 Classification of FSM**
 #### In terms of Signal Outputting
 - **Mealy**: the output depends on both memory state and the input
 - **Moore**: The output depends on memory state only
@@ -56,3 +58,8 @@ Differences:
 - Moore machine needs more stated than Mealy machine.
 - The output of Moore machine is independent of current input, **the effect brought by current input will take palce in the next clock cycle**
 - The outputt of Mealy machine depends on both current state and input. **Input variation leads to immediate output change.** The output can change during the current state. 
+
+#### In terms of structure
+- One Process: Needs more res
+- Two Process: Needs less res, recommended
+- Three Process
