Add notes for Reg, Counter and Multiplier

--- a/第四章 基本时序逻辑电路建模.md
+++ b/第四章 基本时序逻辑电路建模.md
@@ -91,9 +91,107 @@ IF CLK'event and CLK = '0' THEN -- 下降沿
 ---
 
 ## 4.3 寄存器Register
+### Multibit Register
+```VHDL
+LIBRARY IEEE;
+USE IEEE.std_logic_1164.all;
 
+ENTITY four_bit_reg IS
+    GENERIC(n:NATURAL:=4);
+    PORT(D: IN std_logic_vector(n-1 DOWNTO 0);
+    clk,rst: IN std_logic;
+    Q: OUT std_logic_vector(n-1 DOWNTO 0));
+END ENTITY four_bit_reg;
+
+ARCHITECTURE behav OF four_bit_reg IS
+BEGIN
+    PROCESS(clk,rst)
+        IF rst ='0' THEN
+            Q <= (OTHERS =>'0');
+        ELSIF clk'event AND clk='1' THEN
+            Q <= D;
+        END IF;
+    END PROCESS;
+END behav;
+```
+### Shift Register
+- SISO: Serial input -serial output
+- SIPO: Serial input –parallel output
+- PISO: Parallel input –serial output
+
+#### SIPO shift register
+```VHDL
+LIBRARY IEEE;
+USE IEEE.std_logic_1164.all;
+
+ENTITY sipo IS
+    GENERIC(n:NATURAL:=8);
+    PORT(clk,a:IN std_logic;
+    out: OUT std_logic_vector(n-1 DOWNTO 0));
+END ENTITY sipo;
+
+ARCHITECTURE behav OF sipo IS
+BEGIN
+    PROCESS(clk)
+        VARIABLE reg:=std_logic_vector(n-1 DOWNTO 0);
+    BEGIN
+        IF clk'EVENT AND clk='1' THEN
+            reg:=reg(n-1 DOWNTO 0)&a;
+        END IF;
+        out<=reg;
+    END PROCESS;
+END behav;
+```
 ---
 ## 4.4 计数器Counter
+```VHDL
+LIBRARY IEEE;
+USE IEEE.std_logic_1164.all;
+USE IEEE.std_logic_unsigned.all;
+
+ENTITY counter IS
+    GENERIC(n:NATURAL:=8);
+    PORT(clk,rst:IN std_logic;
+    cnt: OUT std_logic_vector(n-1 DOWNTO 0));
+END ENTITY counter;
+
+ARCHITECTURE behav OF counter IS
+BEGIN
+    PROCESS(clk)
+        VARIABLE cnt_m:=std_logic_vector(n-1 DOWNTO 0);
+    BEGIN
+        IF rst='0' THEN
+            cnt:=(OTHERS=>'0');
+        ELSIF clk'EVENT AND clk='1' THEN
+            cnt=cnt+1;
+        END IF;
+        cnt<=cnt_m;
+    END PROCESS;
+END behav;
+```
 
 ---
 ## 4.5 乘法器Multiplier
+```VHDL
+-- 三位乘法器，用于进行两个三位二进制数的乘法运算
+-- 输出为6位二进制数
+LIBRARY IEEE;
+USE IEEE.std_logic_1164.all;
+USE IEEE.std_logic_unsigned.all;
+
+ENTITY mul3 IS
+    PORT(a,b:IN std_logic_vector(2 DOWNTO 0);
+    c: OUT std_logic_vector(5 DOWNTO 0));
+END ENTITY counter;
+
+ARCHITECTURE behav OF mul3 IS
+SIGNAL temp1: std_logic_vector (2 DOWNTO 0);
+SIGNAL temp2: std_logic_vector (3 DOWNTO 0);
+SIGNAL temp3: std_logic_vector (4 DOWNTO 0);
+BEGIN
+    temp1<=a WHEN a(0)='1' ELSE temp1<="000";
+    temp2<=a WHEN a(1)='1' ELSE temp2<="0000";
+    temp3<=a WHEN a(2)='1' ELSE temp3<="00000";
+    c<=temp1+temp2+('0'&temp3);
+END behav;
+```
