--- a/第四章 基本时序逻辑电路建模.md
+++ b/第四章 基本时序逻辑电路建模.md
@@ -44,18 +44,14 @@ LIBRARY IEEE;
 USE IEEE.std_logic_1164.all;
 
 ENTITY D_FF IS
-    PORT(
-        D, CLK: IN std_logic;
-        Q: OUT std_logic;
-    )
+    PORT(D, CLK: IN std_logic;
+        Q: OUT std_logic;)
 END D_FF;
 
 ARCHITECTURE behav OF D_FF IS
 BEGIN
     PROCESS(CLK)
     BEGIN--------------------------多种表述方式
-        IF (CLK = '1') THEN Q<=D;   
-        -- or
         IF (CLK'event AND CLK = '1') THEN Q<=D;
         -- or
         IF RISING_EDGE(CLK) THEN Q<=D;  --can be used only if CLK is std_logic
@@ -72,7 +68,7 @@ IF CLK'event and CLK = '1' THEN -- 上升沿
 IF CLK'event and CLK = '0' THEN -- 下降沿
 ```
 
-### 4.2.2 带有$\overline Q$输出的D触发器
+### **4.2.2 带有$\overline Q$输出的D触发器**
 将`signal`放在process中时，有几个signal变量，仿真时就会产生几个中间节点，导致设计结果不符合要求
 
 着重参考*课本P73-74页例4-5*
