add notes for 1/2/3 process state machine

--- a/第五章 同步时序电路设计.md
+++ b/第五章 同步时序电路设计.md
@@ -26,7 +26,11 @@ $$T>e_{c-q}+t_{hold}+t_{su}$$
 <img src="./pictures/5-3-1-ASM-Chart-1.png">
 
 #### 5.2.2.1 State box
-- 状态名称左上角，二进制编码右上角，框内写操作内容
+- 状态名称左上角，编码右上角，框内写操作内容
+- 编码方式
+  - 二进制编码：需要最少数目寄存器
+  - 格雷码：速度较慢，每次只会变一位
+  - one-hot编码：较长，需要最多寄存器，逻辑简单，速度快
 - 区分操作与输出
   - 操作：例如`R<-0`表示赋值，直到下一次重新赋值才改变`R`的值
   - 输出：例如`C='1'`，表示只在这个状态中才有`c='1'`其他状态`c='0'`
@@ -62,4 +66,6 @@ Differences:
 #### In terms of structure
 - One Process: Needs more res
 - Two Process: Needs less res, recommended
+  - 最常见的seq和com两个进程，一个用于状态寄存器，一个用于控制次态逻辑和输出
 - Three Process
+  - 三个进程，一个状态寄存器，一个次态逻辑，一个当前状态输出
