add notes for extra_reg

--- a/第八章 综合.md
+++ b/第八章 综合.md
@@ -95,3 +95,37 @@ Variable and signal has different behaviors in simulation, and they produce diff
 
 ### Concurrent statement
 Synthesizable concurrent  statements include  process,  concurrent assignment, block statement, generate statement. 
+
+# 寄存器和锁存器的可综合描述
+## 寄存器的引入方法
+### 触发器的引入
+- P205-207
+- 重点注意
+  - 方法三没有敏感参数表
+  - 方法四结合敏感参数表和`IF`进行操作
+  - 方法五使用的`WHEN...ELSE`语句中的`ELSE`要删掉
+
+### 锁存器的引入
+- P207-209
+- 与引入寄存器的区别：敏感参数表多了一个a
+- `CASE`语句的不完全覆盖也会引入寄存器（例8-20），注意`WHEN OTHERS=>NULL`并不意味着完全覆盖的操作
+- 例8-21中有一个`BUFFER`类型变量的例子，要注意
+
+### 具有时钟门控结构的触发器引入
+例8-22这种IF语句里面有三个并列的方式不建议使用，应当改用8-23中的两个IF嵌套方式
+
+### ~~同步复位、置位功能引入~~
+~~其实就是上面的那种，还tm专门拎出来讲，sb~~
+
+### 异步复位、置位
+- P211例8-25
+  - 就是让复位操作优先级最高，给它放在检测上升沿IF语句上面就行！！
+- 置位复位都要有->和上面一样的，就是多一个复位分支
+
+
+## 避免引入多余寄存器
+1. 将不需要进入寄存器的语句单独提出来组成一个process，以避开wait until clk'event或者不完整if的包含
+   1. 重点看8-27和8-28
+2. 避免边沿触发的引入
+3. IF CASE涵盖要完整
+4. 如果信号或者变量在一个CASE里面有赋值操作，那么在其他CASE里面也要有赋值操作（操作要平均）；或者在CASE语句前面统一赋初值，这样没有覆盖到的都会用初值而不需要寄存器了（例8-32）
