add some details

--- a/第八章 综合.md
+++ b/第八章 综合.md
@@ -4,12 +4,11 @@
 - hight level synthesis
   - translation from **algorithmic behavior** description to **RTL** description
   - Input: HDL description code
-  - Results: datapath(a network including registers, function units, multiplexer, bus for data transferring), controller(including  hardwired logic or firmware for controlling  the data transferring  in datapath )
+  - Results: datapath(a network including registers, function units, multiplexer, bus for data transferring), controller(including hardwared logic or firmware for controlling  the data transferring in datapath)
 - logic synthesis
-  -  Translation from **RTL** description  to **logic gate netlist** (automatic process).
-  - Translation from abstract description  to detailed description. 
+  - Translation from **RTL** description to **logic gate netlist** (automatic process).
+  - ~~Translation from abstract description to detailed description.~~
 - layout synthesis
-
 
 # VHDL Synthesis
 ## Common features:
@@ -22,19 +21,18 @@ Types without corresponding hardware can’t be synthesized, e.g. FILE.
 Type :Time (after/wait for statement)
 
 ### 3）Rules for process description
- It’s more free to write a process for simulation,  but **for synthesis, a process includes at most one clock signal**. Some synthesis tools has further limitations on process description.
+ ~~It’s more free to write a process for simulation, but~~ **for synthesis, a process includes at most one clock signal**. ~~Some synthesis tools has further limitations on process description.~~
 
 ### 4）Synchronous design are preferred.
-Synchronous description style is recommended by most of existing EDA tools, the circuit states change according to the clock rhythm.
+Synchronous description style is recommended by most of existing EDA tools, ~~the circuit states change according to the clock rhythm.~~
+~~For asynchronous design,  synthesis results usually need to be optimized by designer.~~  
 
-For asynchronous design,  synthesis results usually need to be optimized by designer.  
-
-## synthesizable data types
-- a) bit ,  boolean , bit_vector
-- b) character , string
-- c) integer
-- d) std_ulogic, std_ulogic_vector, std_logic , std_logic_vector      
-- e) signed , unsigned
+## Synthesizable data types
+-**a) bit, boolean, bit_vector**
+- **b) character, string**
+- **c) integer**
+- **d) std_ulogic, std_ulogic_vector, std_logic, std_logic_vector** 
+- **e) signed, unsigned**
 
 
 ### Enumeration type
@@ -60,9 +58,9 @@ For asynchronous design,  synthesis results usually need to be optimized by desi
 
 Variable and signal has different behaviors in simulation, and they produce different results in synthesis.**(P194-195,注意生成寄存器的数目)**
 
- 1）Generally，better synthesis results can be obtained by making good use of variable.  Because synthesis optimization can be more flexible by using variable . But not all synthesizer support variable synthesis
+~~1）Generally，**better synthesis results can be obtained by making good use of variable**. Because synthesis optimization can be more flexible by using variable .But not all synthesizer support variable synthesis~~
         
-  2）By using signal in process, good consistency can be achieved in signal I/O. It is usually necessary to use a signal if an intermediate data should be hold.
+~~2）By using signal in process, **good consistency** can be achieved in signal I/O. It is usually necessary to use a signal if an intermediate data should be hold.~~
 
 ### 初值
 三种赋初值的方式，见**P195**，建议使用第三种，即在process内部一开始就赋初值
@@ -87,10 +85,10 @@ Variable and signal has different behaviors in simulation, and they produce diff
 - 不完整if语句会产生寄存器。如果if语句判断条件为检测某一信号的跳变，则一般综合成FF。
 
 #### case statements
-- 不平衡的case语句可能也会产生寄存器，所谓不平衡是指不同case里面的操作次数不同
+- 不平衡的case语句可能也会产生寄存器，所谓不平衡是指不同case里面的操作次数不同（见下面“避免引入多于寄存器”的4）
 
 #### loop statements
-- In RTL synthesis, the maximum number of iterations should be a finite, known and static value.
+- In RTL synthesis, **the maximum number of iterations should be a finite, known and static value**.
 - P200-201两个例子，注意第二个用了`next`使得循环能够有选择性地执行
 
 ### Concurrent statement
@@ -115,7 +113,7 @@ Synthesizable concurrent  statements include  process,  concurrent assignment, b
 例8-22这种IF语句里面有三个并列的方式不建议使用，应当改用8-23中的两个IF嵌套方式
 
 ### ~~同步复位、置位功能引入~~
-~~其实就是上面的那种，还tm专门拎出来讲，sb~~
+~~其实就是上面的那种，课本还tm专门拎出来讲，sb~~
 
 ### 异步复位、置位
 - P211例8-25
