modified chapter2 signals&variables

--- a/markdown/第三章 组合逻辑电路建模.md
+++ b/markdown/第三章 组合逻辑电路建模.md
@@ -196,6 +196,6 @@ ARCHITECTURE behav OF tri_bigate IS
 END behav;
 ```
 
-## 3.8 Comparator
+## ~~3.8 Comparator~~
 
-## 3.9 ROM/RAM
+## ~~3.9 ROM/RAM~~
