--- a/markdown/第五章 同步时序电路设计.md
+++ b/markdown/第五章 同步时序电路设计.md
@@ -1,5 +1,7 @@
 # 第五章 同步时序电路设计
 
+考点：会画ASM图，能画出对应波形图，能写出代码
+
 ## 5.1 Sequential Logic Circuit
 ### **Three significant time parameters** (P87)
 - 建立时间$t_{su}$：触发器的时钟信号上升沿到来前数据稳定不变的时间
@@ -63,9 +65,33 @@ Differences:
 - The output of Moore machine is independent of current input, **the effect brought by current input will take palce in the next clock cycle**
 - The outputt of Mealy machine depends on both current state and input. **Input variation leads to immediate output change.** The output can change during the current state. 
 
+判断方法：
+1. 看ASM图，每一个状态框中是否要用到输入
+2. 看RTL图，看输出是否依赖输入
+
 #### In terms of structure
-- One Process: Needs more res
+- One Process: Needs more res **复习2P89**
+  - 可能会引入很多额外的寄存器
 - Two Process: Needs less res, recommended
   - 最常见的seq和com两个进程，一个用于状态寄存器，一个用于控制次态逻辑和输出
+  - **常考**，务必记住格式
 - Three Process
-  - 三个进程，一个状态寄存器，一个次态逻辑，一个当前状态输出
+  - 三个进程，一个状态寄存器，一个次态逻辑，一个当前状态输出（把Two Process的com进程进一步拆分，次态逻辑部分和状态内操作分开）
+
+### 状态编码方式（考察编码方式和选择）
+在综合的时候对Type枚举类型会进行编码，编码方式可以人为指定（复习2P109）
+
+- CPLD更多的提供组合逻辑，而FPGA更多的提供触发器资源，所以CPLD多使用gray-code，而FPGA多使用one-hot编码。
+- 对于小型设计使用gray-code和binary编码更有效，而大型状态机使用one-hot编码更有效。
+
+1. 二进制编码
+  - 需要寄存器数量最少
+  - 需要更多外部辅助逻辑且速度较慢
+2. 格雷码
+  - 触发器少
+  - 速度慢
+  - 不会产生两位同时反转的情况避免竞争冒险，异步使用的时候较为有利
+3. one-hot编码
+  - 寄存器数目最多
+  - 逻辑简单速度快
+----
