--- a/markdown/第四章 基本时序逻辑电路建模.md
+++ b/markdown/第四章 基本时序逻辑电路建模.md
@@ -14,6 +14,8 @@
 
 Latch输入信号D的变化会影响输出Q，在时钟enable的时间内Q随D的变化而变化；FF仅在时钟边沿才会判断改变输出Q的值。二者波形有很大不同。
 
+>！！！补：NULL和Unaffected的区别
+
 ### 4.1.2 D Latch
 ```VHDL
 LIBRARY IEEE;
@@ -115,7 +117,7 @@ END behav;
 - SIPO: Serial input –parallel output
 - PISO: Parallel input –serial output
 
-#### SIPO shift register
+#### **SIPO shift register**
 ```VHDL
 LIBRARY IEEE;
 USE IEEE.std_logic_1164.all;
@@ -140,6 +142,13 @@ END behav;
 ```
 ---
 ## 4.4 计数器Counter
+### 用T触发器构成计数器
+```VHDL
+
+```
+- 可能会产生毛刺 复习2pptP66
+
+### 用
 ```VHDL
 LIBRARY IEEE;
 USE IEEE.std_logic_1164.all;
