--- a/markdown/第四章 基本时序逻辑电路建模.md
+++ b/markdown/第四章 基本时序逻辑电路建模.md
@@ -14,7 +14,39 @@
 
 Latch输入信号D的变化会影响输出Q，在时钟enable的时间内Q随D的变化而变化；FF仅在时钟边沿才会判断改变输出Q的值。二者波形有很大不同。
 
+### 4.1.1 RS latch
+真值表见课本P67
 
+**RTL图要记住！！**
+
+```VHDL
+library ieee;
+use ieee.std_logic_1164.all;
+
+entity rs_latch is
+    port(R,S: in std_logic;
+    Q,Qbar: out std_logic);
+end entity rs_latch;
+
+architecture behav of rs_latch is
+begin
+    process(R,S)
+        variable rs: std_logic_vector(1 downto 0);
+    begin
+        rs:=R&S;
+        case rs is
+            when "00"=>
+                Q<=1;Qbar<=1;
+            when "01"=>
+                Q<=0;Qbar<=1;
+            when "10"=>
+                Q<=1;Qbar<=0;
+            when others=>
+                null;
+        end case;
+    end process;
+end behav;
+```
 
 
 ### 4.1.2 D Latch
@@ -87,6 +119,10 @@ IF CLK'event and CLK = '0' THEN -- 下降沿
 |1|0|1|0|
 |1|1|$\overline{Q}$|$Q$|
 
+
+### 4.2.4 T触发器
+P77
+
 ---
 
 ## 4.3 寄存器Register
@@ -144,10 +180,9 @@ END behav;
 ---
 ## 4.4 计数器Counter
 ### 用T触发器构成计数器
-```VHDL
 
-```
-- 可能会产生毛刺 复习2pptP66
+- 可能会产生毛刺 复习2pptP66 
+- 注意代码和rtl图 课本p81
 
 ### 用
 ```VHDL
