--- a/markdown/第四章 基本时序逻辑电路建模.md
+++ b/markdown/第四章 基本时序逻辑电路建模.md
@@ -184,7 +184,8 @@ END behav;
 - 可能会产生毛刺 复习2pptP66 
 - 注意代码和rtl图 课本p81
 
-### 用
+### 用普通加法做计数器
+
 ```VHDL
 LIBRARY IEEE;
 USE IEEE.std_logic_1164.all;
