--- a/markdown/第五章 同步时序电路设计.md
+++ b/markdown/第五章 同步时序电路设计.md
@@ -61,9 +61,9 @@ r4
 - **Moore**: The output depends on memory state only
 
 Differences:  
-- Moore machine needs more stated than Mealy machine.
+- Moore machine needs more states than Mealy machine.
 - The output of Moore machine is independent of current input, **the effect brought by current input will take palce in the next clock cycle**
-- The outputt of Mealy machine depends on both current state and input. **Input variation leads to immediate output change.** The output can change during the current state. 
+- The output of Mealy machine depends on both current state and input. **Input variation leads to immediate output change.** The output can change during the current state. 
 
 判断方法：
 1. 看ASM图，每一个状态框中是否要用到输入
@@ -72,6 +72,7 @@ Differences:
 #### In terms of structure
 - One Process: Needs more res **复习2P89**
   - 可能会引入很多额外的寄存器
+  - 将state定义为variable
 - Two Process: Needs less res, recommended
   - 最常见的seq和com两个进程，一个用于状态寄存器，一个用于控制次态逻辑和输出
   - **常考**，务必记住格式
