--- a/markdown/第八章 综合.md
+++ b/markdown/第八章 综合.md
@@ -10,6 +10,19 @@
   - ~~Translation from abstract description to detailed description.~~
 - layout synthesis
 
+# Constrains
+用于综合的约束可以用用户定义属性来表示。用户定义只是用于给综合工具传递约束信息，仿真时被忽略。
+
+    attribute  属性名 ： 数据类型 ；
+    attribute  属性名  of  对象名 ：对象类型  is  值；
+
+## 约束种类
+- 资源约束
+  - 基本元件的种类个数
+- 时间约束
+  - 假定一个时序系统工作在20MHZ的时钟频率，那么通过状态寄存器和状态产生逻辑的最大延迟不能超过50ns（20MHZ的倒数）。
+  - 状态机编码约束
+    - 自然二进制，格雷码，onehot
 # VHDL Synthesis
 ## Common features:
 ### 1) Supported subset
@@ -55,6 +68,8 @@ Synchronous description style is recommended by most of existing EDA tools, ~~th
 - Variable
 - Signal
 - ~~File~~
+
+注意并非所有综合器都支持变量综合
 
 Variable and signal has different behaviors in simulation, and they produce different results in synthesis.**(P194-195,注意生成寄存器的数目)**
 
