--- a/markdown/第五章 同步时序电路设计.md
+++ b/markdown/第五章 同步时序电路设计.md
@@ -64,6 +64,7 @@ Differences:
 - Moore machine needs more states than Mealy machine.
 - The output of Moore machine is independent of current input, **the effect brought by current input will take palce in the next clock cycle**
 - The output of Mealy machine depends on both current state and input. **Input variation leads to immediate output change.** The output can change during the current state. 
+- Moore 输出端自动同步，mealy需要人为加入同步信号
 
 判断方法：
 1. 看ASM图，每一个状态框中是否要用到输入
@@ -76,6 +77,7 @@ Differences:
 - Two Process: Needs less res, recommended
   - 最常见的seq和com两个进程，一个用于状态寄存器，一个用于控制次态逻辑和输出
   - **常考**，务必记住格式
+  - state应为signal 因为要在进程之间传递
 - Three Process
   - 三个进程，一个状态寄存器，一个次态逻辑，一个当前状态输出（把Two Process的com进程进一步拆分，次态逻辑部分和状态内操作分开）
 
