--- a/markdown/第八章 综合.md
+++ b/markdown/第八章 综合.md
@@ -12,10 +12,10 @@
 
 # Constrains
 用于综合的约束可以用用户定义属性来表示。用户定义只是用于给综合工具传递约束信息，仿真时被忽略。
-
-    attribute  属性名 ： 数据类型 ；
-    attribute  属性名  of  对象名 ：对象类型  is  值；
-
+```VHDL
+attribute  属性名 ： 数据类型 ；
+attribute  属性名  of  对象名 ：对象类型  is  值；
+```
 ## 约束种类
 - 资源约束
   - 基本元件的种类个数
@@ -142,3 +142,20 @@ Synthesizable concurrent  statements include  process,  concurrent assignment, b
 2. 避免边沿触发的引入
 3. IF CASE涵盖要完整
 4. 如果信号或者变量在一个CASE里面有赋值操作，那么在其他CASE里面也要有赋值操作（操作要平均）；或者在CASE语句前面统一赋初值，这样没有覆盖到的都会用初值而不需要寄存器了（例8-32）
+
+# 优化
+## 提高综合效率的策略
+1. 尽量不使用WAIT FOR XX ns语句和AFTER XX ns语句。XX ns表明在执行下一操作之前需要等待的时间，但综合器不予支持，一般忽略该时间，而不会综合成某种元件，故对于包含此类语句的程序，仿真结果与综合结果往往不一致。
+2. 声明信号和变量时尽量不赋初值，定义某确定数值时，使用常量而不用变量赋初值的形式。因为大多数综合工具将忽略赋值等初始化语句
+3. 函数或过程调用时尽量使用名称关联。不要在同一个语句中同时使用两种关联。
+```VHDL
+clk_1:bufes port map（I=>clock_in，clock_out）；--(不正确的用法)
+clk_1:bufes port map（I=>clock_in，O=>clock_out）；--(正确的用法) 
+```
+4. 正确使用when_else语句、if_else语句和case语句，条件涵盖要完整，防止产生不必要的寄存器
+5. 注意算术功能的设计优化。
+ ```VHDL 
+ Out<=A+B+C+D;
+ Out<=(A+B)+(C+D);
+ --第一条语句综合后将会连续叠放3个加法器（（（A+B）+C）+D）；第二条语句（A+B）和（C+D）使用两个并行的加法器，同时进行加法运算，再将运算结果通过第三个加法器进行组合。虽然使用资源数量相同，但第二条语句速度更快。
+ ```
