add notes on iteration

--- a/markdown/第三章 组合逻辑电路建模.md
+++ b/markdown/第三章 组合逻辑电路建模.md
@@ -123,7 +123,8 @@ END full_adder;
 ### Sequential 4-bit Adder
 - Use packaged component
 - See P55
-
+- 使用了空间迭代法
+- 还可以使用时间迭代法，见`期末答疑ppt24页`
 ### Parallel 4-bit Adder
 - See P56
 - higher speed than sequential adder
