add some details when reviewing

--- a/markdown/第三章 组合逻辑电路建模.md
+++ b/markdown/第三章 组合逻辑电路建模.md
@@ -119,6 +119,29 @@ COMPONENT full_adder IS
     sun, co: OUT std_logic);
 END full_adder;
 ```
+### **2-bit full adder**
+```vhdl
+library ieee;
+use ieee.std_logic_1164.all;
+
+entity fadder2bit is
+    port(a,b: in std_logic_vector(1 downto 0);
+    cin: in std_logic;
+    c: out std_logic_vector(1 downto 0);
+    cout: out std_logic);
+end entity;
+
+architecture behav of fadder2bit is
+signal sint: std_logic_vector(2 downto 0);
+signal aa,bb: std_logic_Vector(1 downto 0);
+begin
+    aa<='0'&a;
+    bb<='0'&b;
+    sint<=aa+bb+cin;
+    c<=sint(1 downto 0);
+    cout<=sint(2);
+end behav;
+```
 
 ### Sequential 4-bit Adder
 - Use packaged component
