--- a/markdown/第五章 同步时序电路设计.md
+++ b/markdown/第五章 同步时序电路设计.md
@@ -82,7 +82,7 @@ Differences:
   - 三个进程，一个状态寄存器，一个次态逻辑，一个当前状态输出（把Two Process的com进程进一步拆分，次态逻辑部分和状态内操作分开）
 
 ### 状态编码方式（考察编码方式和选择）
-在综合的时候对Type枚举类型会进行编码，编码方式可以人为指定（复习2P109）课本p103格式
+在综合的时候对Type枚举类型会进行编码，**编码方式可以人为指定（复习2P109）课本p103格式**
 
 - CPLD更多的提供组合逻辑，而FPGA更多的提供触发器资源，所以CPLD多使用gray-code，而FPGA多使用one-hot编码。
 - 对于小型设计使用gray-code和binary编码更有效，而大型状态机使用one-hot编码更有效。
