--- a/markdown/第八章 综合.md
+++ b/markdown/第八章 综合.md
@@ -144,6 +144,17 @@ Synthesizable concurrent  statements include  process,  concurrent assignment, b
 4. 如果信号或者变量在一个CASE里面有赋值操作，那么在其他CASE里面也要有赋值操作（操作要平均）；或者在CASE语句前面统一赋初值，这样没有覆盖到的都会用初值而不需要寄存器了（例8-32）
 
 # 优化
+优化的两个方面：
+- 速率优化
+  - 流水线优化：拆分为若干个过程，每个过程并行运行
+  - 合理使用嵌入式阵列块EAB资源和LPM宏单元库来提高乘法器速度
+  - 关键路径优化：关键路径指**输入到输出延时最长的逻辑通道**
+- 面积优化
+  - 资源共享：通过数据缓冲或多路选择的方法来共享数据通道中占用资源较多的模块（如乘法器、多位加法器等算术模块）（如两乘法器一选择，变为一选择一乘法）
+## 针对传输延时的要求(要会计算！！)
+-  一个时钟周期的最坏情况为$T = T_{clk}+\delta+t_{jitter}$
+- 传输所需要的最短时间为$T_{delay} = t_{su} + t_{c-q}+t_{plogic}$
+- **结合起来应有$T_{clk}+\delta+t_{jitter} \gt t_{su} + t_{c-q}+t_{plogic}$**
 ## 提高综合效率的策略
 1. 尽量不使用WAIT FOR XX ns语句和AFTER XX ns语句。XX ns表明在执行下一操作之前需要等待的时间，但综合器不予支持，一般忽略该时间，而不会综合成某种元件，故对于包含此类语句的程序，仿真结果与综合结果往往不一致。
 2. 声明信号和变量时尽量不赋初值，定义某确定数值时，使用常量而不用变量赋初值的形式。因为大多数综合工具将忽略赋值等初始化语句
