add asyn&syn state machine design

--- a/markdown/第五章 同步时序电路设计.md
+++ b/markdown/第五章 同步时序电路设计.md
@@ -48,6 +48,7 @@ $$T>e_{c-q}+t_{hold}+t_{su}$$
 #### 5.2.2.4 Summary
 - **`区分state box`和`conditional output box`**
   - (P91 图5-12) `Decision Box`与其上面的`State Box`在同一时钟周期内完成，若`Decison Box`下接`Conditional Output Box`，则该`Conditional Output Box`与上面的`Decison Box`和`State Box`在同一个时钟周期内完成操作
+- 状态机有同步和非同步两种方式，按照常规方式为非同步（输出信号的时序不固定）；若使用临时量存储输出值，最后的输出操作放到seq中，则输出信号按照时钟时序输出，这种方式为同步。
 
 #### 5.2.2.5 **State and State Box**
 - One state  is more than a state box.
