--- a/markdown/第八章 综合.md
+++ b/markdown/第八章 综合.md
@@ -170,3 +170,5 @@ clk_1:bufes port map（I=>clock_in，O=>clock_out）；--(正确的用法)
  Out<=(A+B)+(C+D);
  --第一条语句综合后将会连续叠放3个加法器（（（A+B）+C）+D）；第二条语句（A+B）和（C+D）使用两个并行的加法器，同时进行加法运算，再将运算结果通过第三个加法器进行组合。虽然使用资源数量相同，但第二条语句速度更快。
  ```
+- 在进程中, 对变量要先读后写。
+因为变量值是立即获得的, 如果先写后读就会产生长的组合逻辑和锁存器。因此, 在编写代码时, 对变量要先读后写. 
