--- a/markdown/第四章 基本时序逻辑电路建模.md
+++ b/markdown/第四章 基本时序逻辑电路建模.md
@@ -119,10 +119,31 @@ IF CLK'event and CLK = '0' THEN -- 下降沿
 |1|0|1|0|
 |1|1|$\overline{Q}$|$Q$|
 
+```VHDL
+Case R&S is
+    When “00”=> Q0<=Q0;
+    When “01”=> Q0<=’0’;
+    When “10”=> Q0<=’1’;
+    When “11”=> Q0<=not Q0;
+    When others =>null;
+End case;
+```
 
 ### 4.2.4 T触发器
 P77
 应用：计数器，期末答疑ppt43
+
+### 4.2.5 SR锁存器
+```VHDL
+Case R&S is
+    When “00”=> Q1<=Q1;
+    When “01”=> Q1<=’1’;
+    When “10”=> Q1<=’0’;
+    When “11”=> Q1<=’X’;
+    When others =>null;
+End case;
+```
+
 ---
 
 ## 4.3 寄存器Register
