--- a/markdown/第五章 同步时序电路设计.md
+++ b/markdown/第五章 同步时序电路设计.md
@@ -40,7 +40,7 @@ $$T>e_{c-q}+t_{hold}+t_{su}$$
 <img src="./pictures/5-3-1-ASM-Chart-2.png">
 
 #### 5.2.2.2 Decision Box
-- The decision box must **followed and be associated with a state box**. The decision is made in the **same clock cycle** as the actions of the associated state.
+- The decision box must **follow and be associated with a state box**. The decision is made in the **same clock cycle** as the actions of the associated state.
 
 #### 5.2.2.3 Conditional Output Box
 - **It should follow a decision box**. The output signal is asserted in the same clock cycle as those in the associated decision box.
