--- a/markdown/第五章 同步时序电路设计.md
+++ b/markdown/第五章 同步时序电路设计.md
@@ -74,7 +74,7 @@ Differences:
 #### In terms of structure
 - One Process: Needs more res **复习2P89**
   - 可能会引入很多额外的寄存器
-  - 将state定义为variable
+  - **将state定义为variable**
 - Two Process: Needs less res, recommended
   - 最常见的seq和com两个进程，一个用于状态寄存器，一个用于控制次态逻辑和输出
   - **常考**，务必记住格式
