--- a/markdown/第八章 综合.md
+++ b/markdown/第八章 综合.md
@@ -155,6 +155,14 @@ Synthesizable concurrent  statements include  process,  concurrent assignment, b
 -  一个时钟周期的最坏情况为$T = T_{clk}+\delta+t_{jitter}$
 - 传输所需要的最短时间为$T_{delay} = t_{su} + t_{c-q}+t_{plogic}$
 - **结合起来应有$T_{clk}+\delta+t_{jitter} \gt t_{su} + t_{c-q}+t_{plogic}$**
+
+### 惯性延时（固有延时）
+- 信号脉宽小于器件的惯性延时，器件对输入信号不做任何反应
+- 对应语句`z <= x after 5ns`
+### 传输延时
+- 不考虑信号的脉宽，仅仅表现为普通的延时
+- 对应语句`z <= TRANSPORT x after 5ns`
+
 ## 提高综合效率的策略
 1. 尽量不使用WAIT FOR XX ns语句和AFTER XX ns语句。XX ns表明在执行下一操作之前需要等待的时间，但综合器不予支持，一般忽略该时间，而不会综合成某种元件，故对于包含此类语句的程序，仿真结果与综合结果往往不一致。
 2. 声明信号和变量时尽量不赋初值，定义某确定数值时，使用常量而不用变量赋初值的形式。因为大多数综合工具将忽略赋值等初始化语句
