fix some details

--- a/markdown/第三章 组合逻辑电路建模.md
+++ b/markdown/第三章 组合逻辑电路建模.md
@@ -16,7 +16,7 @@ ARCHITECTURE behav OF decoder38 IS
     SIGNAL indata: std_logic_vector(2 DOWNTO 0);
 BEGIN
     indata <= c&b&a;
-    PROCESS (indata, g!,g2a, g2b)
+    PROCESS (indata, g1,g2a, g2b)
     BEGIN
         IF g1 = '1' AND g2a = '0' AND g2b = '0' THEN
             CASE indata IS
@@ -63,7 +63,7 @@ BEGIN
     y <= "101" WHEN x="00100000" ELSE
     y <= "110" WHEN x="01000000" ELSE
     y <= "111" WHEN x="10000000" ELSE
-    "ZZZ";
+    "XXX";
 END behav;
 ```
 
@@ -104,7 +104,7 @@ END behav;
 ### Half Adder
 ```VHDL
 sum <= x XOR y;
-c0 <= x AND y
+co <= x AND y
 ```
 
 ### Full Adder
@@ -116,7 +116,7 @@ Packup as `COMPONENT`
 ```VHDL
 COMPONENT full_adder IS
     PORT(x,y,ci:IN std_logic;
-    sun, co: OUT std_logic);
+    sum, co: OUT std_logic);
 END full_adder;
 ```
 ### **2-bit full adder**
@@ -133,7 +133,7 @@ end entity;
 
 architecture behav of fadder2bit is
 signal sint: std_logic_vector(2 downto 0);
-signal aa,bb: std_logic_Vector(1 downto 0);
+signal aa,bb: std_logic_Vector(2 downto 0);
 begin
     aa<='0'&a;
     bb<='0'&b;
@@ -215,7 +215,7 @@ ARCHITECTURE behav OF tri_bigate IS
         aout<=b;
     ELSE aout <="ZZZZZZZZ";
     END IF;
-    a<=bout;
+    a<=aout;
     END PROCESS;
 END behav;
 ```
