--- a/markdown/第五章 同步时序电路设计.md
+++ b/markdown/第五章 同步时序电路设计.md
@@ -5,7 +5,7 @@
 ## 5.1 Sequential Logic Circuit
 ### **Three significant time parameters** (P87)
 - 建立时间$t_{su}$：触发器的时钟信号上升沿到来前数据稳定不变的时间
-- 保持时间$t_{hold}$$：触发器时钟信号上升沿到来后数据稳定不变的时间
+- 保持时间$t_{hold}$：触发器时钟信号上升沿到来后数据稳定不变的时间
 - 传播延时$t_{c-q}$：信号在传播路径上的延时
 - 最小传播时间必须满足：
 $$T>e_{c-q}+t_{hold}+t_{su}$$
