--- a/markdown/第四章 基本时序逻辑电路建模.md
+++ b/markdown/第四章 基本时序逻辑电路建模.md
@@ -42,7 +42,7 @@ begin
             when "10"=>
                 Q<=1;Qbar<=0;
             when others=>
-                null;
+                NULL;
         end case;
     end process;
 end behav;
@@ -136,11 +136,11 @@ P77
 ### 4.2.5 SR锁存器
 ```VHDL
 Case R&S is
-    When “00”=> Q1<=Q1;
-    When “01”=> Q1<=’1’;
-    When “10”=> Q1<=’0’;
-    When “11”=> Q1<=’X’;
-    When others =>null;
+    When "00"=> Q1<=Q1;
+    When "01"=> Q1<='1';
+    When "10"=> Q1<='0';
+    When "11"=> Q1<='X';
+    When others =>NULL;
 End case;
 ```
 
