--- a/markdown/期末复习.md
+++ b/markdown/期末复习.md
@@ -1,4 +1,8 @@
 # 期末复习
 
+- 利用T触发器构成多位计数器，异步时序电路，期末复习二ppt63页
 - 期末复习PPT16程序 注意触发器的实现
 - 几个时间的定义
+- 时序电路与逻辑电路的区别
+  - 组合逻辑电路在逻辑功能上的特点是任意时刻的输出仅仅取决于该时刻的输入，与电路原来的状态无关
+  - 时序逻辑电路在逻辑功能上的特点是任意时刻的输出不仅取决于当时的输入信号，而且还取决于电路原来的状态，或者说，还与以前的输入有关。
