fix some details

--- a/markdown/第五章 同步时序电路设计.md
+++ b/markdown/第五章 同步时序电路设计.md
@@ -8,7 +8,7 @@
 - 保持时间$t_{hold}$：触发器时钟信号上升沿到来后数据稳定不变的时间
 - 传播延时$t_{c-q}$：信号在传播路径上的延时
 - 最小传播时间必须满足：
-$$T>e_{c-q}+t_{hold}+t_{su}$$
+$$T>t_{c-q}+t_{hold}+t_{su}$$
 
 ## 5.2 State Machine  
 - A mathematic model for computer programs or sequential logic description.
@@ -94,7 +94,7 @@ Differences:
 2. 格雷码
   - 触发器少
   - 速度慢
-  - 不会产生两位同时反转的情况避免竞争冒险，异步使用的时候较为有利
+  - 不会产生两位同时反转的情况避免竞争冒险，**异步**使用的时候较为有利
 3. one-hot编码
   - 寄存器数目最多
   - 逻辑简单速度快
